--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.13",
+    "deprecated-react-native-listview": "^0.0.8",
     "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "~46.0.16",
     "expo-splash-screen": "~0.16.2",
